--- a/opdracht_4/index.html
+++ b/opdracht_4/index.html
@@ -22,7 +22,7 @@
         <button type="button" name="button" onclick="combine()">Berekenen</button>
       </div>
       <div class="uitvoer">
-        <p>De resultaat: <span id="resultaat"></span></p>
+        <p>Het resultaat: <span id="resultaat"></span></p>
       </div>
       <footer>
         <p>Gemaakt door Simon Boerrigter</p>
